--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Python
-__pycache__/
-build/*
-dist/*
-env/
-*.egg-info/
-.eggs/*
+python/__pycache__/
+python/build/
+python/dist/
+python/env/
+python/*.egg-info/
+python/.eggs/*
